--- a/week5/mystyle.css
+++ b/week5/mystyle.css
@@ -1,4 +1,9 @@
+    body {
+		    background-color: #E8E9EB;
 
+	    }
+
+	  body {margin: 0px;}
 	  .topnav {
         overflow: auto;
         background-color: #140101;
@@ -17,7 +22,7 @@
         border-bottom: 3px solid transparent;
       }
   
-      .topnav b {
+    .topnav b {
         float: right;
         display: block;
         color: white;
@@ -28,11 +33,11 @@
         font-family: 'Courier New', monospace;
         border-bottom: 3px solid transparent;
       }
-      .topnav a:hover {
+    .topnav a:hover {
         border-bottom: 3px solid violet;
       }
   
-      .topnav a.active {
+    .topnav a.active {
         border-bottom: 3px solid violet;
           }
 
@@ -64,7 +69,7 @@
     }
 
     .column2 {
-        float: right;
+        float: left;
         width: 65%;
         overflow: hidden;
     }
@@ -72,22 +77,15 @@
         margin: auto;
         padding: 10px;
         min-height:300px;
-        margin: 20px 20px 0 0;
         position: relative;
         z-index: 1; 
     }
-    h1 {
-        border-radius: 30px; 
-        border: 3px solid violet;
-        font-family: 'Courier New', cursive;
-	    text-align: left;
-        font-size: 60px;
-        padding: 15px;
-        color: white;
-        margin-left: 1px;
-        margin-top: 50px;
-    }
-  
+     h1 {  
+          font-family: 'Arial';
+          font-size: 60px;
+          color: black;
+          margin-left: 10px ;
+      }
     h2 {
         background-color: black;
         border: 2px solid violet;
@@ -98,17 +96,12 @@
         color: white;
         margin-left: 1px;
     }
-    h3 {
-        font-family: 'Open Sans';
-        font-size: 60px;
-        color: black;
-        margin-left: 1px ;
-    }
     p {
-        font-family: 'Open Sans', monospace;
-        font-size: 18px;
+        text-align: justify;
+        font-family: 'Open Sans';
+        font-size: 14px;
         color: black;
-        margin-left: 1px ;
+        margin-left: 10px ;
     }
 
 
